# rustgc_paper_experiment

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.paper  Makefile  README.md  alloy_adapter.py  artefacts.py  bench.py  benchmark.config.toml  benchmarks.py  build.py  build.sh  build_alloy.sh  build_som_rs.sh  common.mk  fetch_binaries.sh  heaptrack.py  helpers.py  ht_parser.py  install_deps.sh  mem-harness.sh  new_results.py  packages-arch.txt  packages-debian.txt  parse_results.py  perf-harness.sh  plots.py  premopt.naive.config.toml  premopt.none.config.toml  premopt.opt.config.toml  process.py  process_barriers_experiment.py  process_finaliser_experiment.py  process_graph.py  process_overview.py  process_som_rs_experiment.py  pyproject.toml  rebench.conf  rebench_mem.conf  (+12 more)
alacritty_benchmarks/: Makefile
alloy/: elision.naive.config.toml  elision.opt.config.toml  gcvs.rc.config.toml  premopt.naive.config.toml  premopt.naive.perf.config.toml  premopt.none.config.toml  premopt.none.mem.config.toml  premopt.none.perf.config.toml  premopt.opt.perf.config.toml
awfy_benchmarks/: .gitignore  Makefile  som-rs-ast.conf  som-rs-bc.conf  yksom.conf
clbg_benchmarks/: .gitignore  Makefile  regex-gc.patch  regex_gc.patch
configs/: barriers_naive.config.toml  barriers_none.config.toml  elision.naive.mem.config.toml  elision.naive.perf.config.toml  elision.opt.mem.config.toml  finalise_naive.config.toml  opt.config.toml  premopt.naive.mem.config.toml
grmtools_benchmarks/: .gitignore  Makefile  cactus_gc.patch  grmtools.conf  regex_gc.patch
src/parserbench/: Cargo.toml
src/parserbench/src/: java.y
(+191 files in other folders)
