[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rustgc_paper_experiment"
version = "0.1.0"
description = "An automated tool for building, running, and processing the experiment artefacts for the paper: 'Garbage Collection for Rust: The Finalizer Frontier'."
authors = [{ name = "Jacob Hughes", email = "jh@jakehughes.uk" }, { name = "Laurence Tratt", email = "laurie@tratt.net"}]
requires-python = ">=3.11"
dependencies = [
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "docopt==0.6.2",
    "fonttools==4.54.1",
    "humanfriendly==10.0",
    "kiwisolver==1.4.7",
    "matplotlib==3.9.2",
    "numpy==2.1.1",
    "packaging==24.1",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "psutil==6.0.0",
    "py-cpuinfo==9.0.0",
    "pykwalify==1.8.0",
    "pyparsing==3.1.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "PyYAML==6.0.2",
    "ReBench==1.2.0",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "six==1.16.0",
    "tzdata==2024.2",
    "invoke==2.2.0",
    "tqdm==4.66.4",
    "toml==0.10.2",
    "gdown==5.1.0",
    "xvfbwrapper",
    "jinja2"
]

